# IntroBioProject

./: .gitignore  cds_finder.py  cli.py  coding_sequence_finder.py  main.py  pipeline_runner.py  protein_comparator.py  protein_parser.py  protein_translator.py  pyproject.toml  test_cds_finder.py  transcriptor.py
benchmarks/: protein_match_benchmark.py
data/generated_data/: proteins.fasta
data/generated_data/ecoli/: predicted_proteins.fasta
data/raw/proteins/: uniprotkb_Escherichia_coli_str_K_12_sub_2025_02_12.fasta
gene_prediction/: dnabert.py  gene_predictor.py  random_forest_gene_predictor.py
generated_data/: proteins.fasta
src/: config.py
src/data_loading/: genome_fetcher.py  proteins_fetcher.py
src/gene_prediction/: data_preparation.py  gene_predictor.py  random_forest_gene_predictor.py  xgboost_gene_predictor.py
src/transcription/: transcriptor.py
tests/: test_coding_sequences_finder.py  test_protein_translator.py  test_transcriptor.py
transcription/: transcriptor.py
translation/: protein_translator.py
